# Z-Image-app

./: .env.example  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md
apps/: __init__.py
apps/api/: .env.example  README.md  __init__.py  auth.py  main.py  pyproject.toml  schemas.py
apps/api/routes/: __init__.py  images.py  system.py
apps/web/: .env.example  eslint.config.cjs  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  types.ts
apps/web/src/components/: AdvancedSettings.tsx  BatchPreview.tsx  CachedImage.tsx  GenerationViewer.tsx  Header.tsx  HistoryPanel.tsx  PromptInput.tsx  ResultViewer.tsx  Sidebar.tsx  StudioView.tsx
apps/web/src/hooks/: useAuthKey.ts  useClipboard.ts  useHistory.ts  useImageGeneration.ts  useMobile.ts
apps/web/src/i18n/: index.tsx  translations.ts
apps/web/src/pages/: HistoryPage.tsx
apps/web/src/store/: generationStore.ts  historyStore.ts
apps/web/src/types/: history.ts
apps/worker/: .env.example  README.md  __init__.py  main.py  pyproject.toml
assets/: README.md
docs/: Agents.md  DFloat11_intro.md  api.md  architecture.md  database.md  quickstart.md
infra/: docker-compose.dev.yml
infra/docker/api/: Dockerfile
infra/docker/web/: Dockerfile
infra/docker/worker/: Dockerfile
infra/k8s/: README.md
infra/terraform/: README.md
libs/: __init__.py
libs/py_core/: __init__.py  celery_app.py  config.py  db.py  dfloat11_ext.py  storage.py  tasks.py  types.py  z_image_pipeline.py
libs/ts_ui/: README.md
scripts/: __init__.py  compare_safetensors_state_dicts.py  compress_z_image_dfloat11.py  compress_z_image_dfloat11_parallel.py  dev_all.sh  dev_api.sh  dev_deps_down.sh  dev_deps_up.sh  dev_stop.sh  dev_web.sh  dev_worker.sh  download_models.py  download_models.sh  migrate_outputs_to_s3.py  upload_modelscope_model.py
scripts/sql/: 001_init_image_db.sql
(+11 files in other folders)
